# preacher_studio_API

./: .gitignore  Dockerfile  GEMINI.md  main.py  pyproject.toml  railway.json  settings.toml
.gemini/skills/refactor/: SKILL.md
.gemini/skills/ui/: SKILL.md
.github/workflows/: main.yml
app/api/endpoints/: auth.py  export.py  profile.py  sermons.py  system.py  websocket_endpoints.py
app/core/: db.py  exceptions.py  logger.py  security.py
app/repository/: sermon_repository.py
app/schemas/: sermon.py
app/services/: ai_service.py
cli/: release_notes.py
config/: config.py
db/: optimizations.sql  profile_mentorship.sql  schemas.sql
docs/arquitecture/: 00_overview.md  01_layers.md  02_endpoints.md  03_database.md  04_ai_workflow.md  05_security_deployment.md  06_improvements_roadmap.md  07_system_design.md  08_frontend_design_system.md
docs/decisions/: 01_tech_stack_selection.md
docs/front/arquitecture/: 00_overview.md
docs/front/decisions/: 01_tech_stack.md
docs/front/runbooks/: 01_roadmap.md
docs/runbooks/: 01_railway_deployment.md  02_testing_implementation.md  03_advanced_security.md  04_observability_monitoring.md  05_api_ux_improvements.md  06_performance_scalability.md  07_cicd_pipeline.md  08_product_features_implementation.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
tests/: test_ai_service.py  test_api_sermons.py  test_db.py  test_export.py  test_logger.py  test_profile.py  test_schemas.py  test_security.py  test_sermon_repository.py  test_system.py  test_websocket.py
(+29 files in other folders)
